# virtual-try-on

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Dockerfile.compose  Dockerfile1  Jenkinsfile  Makefile  README.md  celery_worker.py  config.py  docker-compose.yaml  pyproject.toml  requirements.txt  run.py  run.sh
.githib/workflows/: gcp.yml
.github/workflows/: gcp.yml
app/: __init__.py  celery.py  extensions.py  logger.py  redis_check.py
app/auth/: __init__.py  models.py  routes.py
app/blueprints/module_one/templates/: index.html
app/database/: db_init.py
app/main/: routes.py
app/static/js/: index.js  items.js  login.js  productinfo.js  register.js
app/static/stylesheets/: styles.css
app/templates/auth/: login.html  register.html
app/templates/main/: index.html
app/templates/postloggedin/: items.html  productinfo.html
app/vision/: synthesis.backup.py  synthesis.py  synthesis1.py
blueprints/module_one/templates/: index.html
vto/: Dockerfile  pyproject.toml
vto/vto/: app.py
vto/vto/blueprints/module_one/: module_one.py
