[tool.poetry]
name = "virtual-try-on"
version = "0.1.0"
description = ""
authors = ["Sagar Adhikari <sageradh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
python-dotenv = "^1.0.1"
flask-migrate = "^4.0.7"
diffusers = {version = "0.27.2", allow-prereleases = true}
accelerate = {version = "0.29.2", allow-prereleases = true}
transformers = {version = "4.39.3", allow-prereleases = true}
albumentations = {version = "1.4.3", allow-prereleases = true}
certifi = {version = "2024.2.2", allow-prereleases = true}
charset-normalizer = {version = "3.3.2", allow-prereleases = true}
coloredlogs = {version = "15.0.1", allow-prereleases = true}
contourpy = {version = "1.2.1", allow-prereleases = true}
cycler = {version = "0.12.1", allow-prereleases = true}
cython = {version = "3.0.10", allow-prereleases = true}
easydict = {version = "1.13", allow-prereleases = true}
filelock = {version = "3.13.4", allow-prereleases = true}
flatbuffers = {version = "24.3.25", allow-prereleases = true}
fonttools = {version = "4.51.0", allow-prereleases = true}
fsspec = {version = "2024.3.1", allow-prereleases = true}
huggingface-hub = {version = "0.22.2", allow-prereleases = true}
humanfriendly = {version = "10.0", allow-prereleases = true}
idna = {version = "3.7", allow-prereleases = true}
imageio = {version = "2.34.0", allow-prereleases = true}
importlib-metadata = {version = "7.1.0", allow-prereleases = true}
insightface = {version = "0.7.3", allow-prereleases = true}
jinja2 = {version = "3.1.3", allow-prereleases = true}
joblib = {version = "1.4.0", allow-prereleases = true}
kiwisolver = {version = "1.4.5", allow-prereleases = true}
lazy-loader = {version = "0.4", allow-prereleases = true}
markupsafe = {version = "2.1.5", allow-prereleases = true}
matplotlib = {version = "3.8.4", allow-prereleases = true}
mpmath = {version = "1.3.0", allow-prereleases = true}
networkx = {version = "3.3", allow-prereleases = true}
numpy = {version = "1.26.4", allow-prereleases = true}
onnx = {version = "1.16.0", allow-prereleases = true}
onnxruntime = {version = "1.17.3", allow-prereleases = true}
opencv-python = {version = "4.9.0.80", allow-prereleases = true}
opencv-python-headless = {version = "4.9.0.80", allow-prereleases = true}
packaging = {version = "24.0", allow-prereleases = true}
pillow = {version = "10.3.0", allow-prereleases = true}
prettytable = {version = "3.10.0", allow-prereleases = true}
protobuf = {version = "5.26.1", allow-prereleases = true}
psutil = {version = "5.9.8", allow-prereleases = true}
pyparsing = {version = "3.1.2", allow-prereleases = true}
python-dateutil = {version = "2.9.0.post0", allow-prereleases = true}
pyyaml = {version = "6.0.1", allow-prereleases = true}
regex = {version = "2023.12.25", allow-prereleases = true}
requests = {version = "2.31.0", allow-prereleases = true}
safetensors = {version = "0.4.2", allow-prereleases = true}
scikit-image = {version = "0.23.1", allow-prereleases = true}
scikit-learn = {version = "1.4.2", allow-prereleases = true}
scipy = {version = "1.13.0", allow-prereleases = true}
six = {version = "1.16.0", allow-prereleases = true}
sympy = {version = "1.12", allow-prereleases = true}
threadpoolctl = {version = "3.4.0", allow-prereleases = true}
tifffile = {version = "2024.2.12", allow-prereleases = true}
tokenizers = {version = "0.15.2", allow-prereleases = true}
torch = {version = "2.2.2", allow-prereleases = true}
tqdm = {version = "4.66.2", allow-prereleases = true}
typing-extensions = {version = "4.11.0", allow-prereleases = true}
urllib3 = {version = "2.2.1", allow-prereleases = true}
wcwidth = {version = "0.2.13", allow-prereleases = true}
zipp = {version = "3.18.1", allow-prereleases = true}


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
