[tool.poetry]
name = "virtual-try-on"
version = "0.1.0"
description = ""
authors = ["Sagar Adhikari <sageradh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
python-dotenv = "^1.0.1"
flask-migrate = "^4.0.7"
pytest = "^8.1.1"
pylint = "^3.1.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
